--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                 </div>
                 <div class="column right">
                     <div class="text">Leandro Sobral, sou <span class="typing-2"></span></div>
-                    <p>Graduando Analise e Desenvolvimento de Sistemas. Sou apaixonado por desenvolvimento. Iniciei minha carreira atuando desde suporte a usuários e infraestrutura. Fiz transição de carreira para o Desenvolvimento para uma realização de sonho. Hoje sou Desenvolvedor Backend em JavaScript.</p>
+                    <p>Graduando Analise e Desenvolvimento de Sistemas. Sou um desenvolvedor apaixonado pelo que faço. Estou realizando um sonho em me tornar desenvolvedor. Por isso estou sempre querendo aprender algo novo que me ajude a ser um desenvolvedor cada vez melhor.
+Estou com 1,5 anos de experiência e hoje atuo como estagiário backend na Cencosud, utilizando NodeJS, Docker/Rancher, MySQL e ainda continuo estudando muito para aprender muito mais.</p>
                     <a href="#">Download CV</a>
                 </div>
             </div>
