--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-1">Ola, meu nome é</div>
+                <div class="text-1">Olá, meu nome é</div>
                 <div class="text-2">Leandro Sobral</div>
                 <div class="text-3">eu sou <span class="typing"></span></div>
                 <a href="https://wa.me/5579981447870">Contate-me</a>
